<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginVertical="4dp"
        android:orientation="vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:gravity="center"
            android:textSize="24dp"
            android:paddingVertical="8dp"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingVertical="4dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textIsSelectable="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingVertical="4dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_editText_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:textIsSelectable="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:layout_margin="4dp">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/reg_EditText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textIsSelectable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingVertical="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_EditText_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textIsSelectable="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingVertical="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_EditText_repeat_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textIsSelectable="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/reg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/btn_reg"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/reg_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"

                android:paddingVertical="16dp"


                android:text="@string/btn_have_account"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>