<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/crod_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:text="@string/crod"
            android:textColor="#000000"
            android:textSize="18dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_EditText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textIsSelectable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_EditText_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textIsSelectable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/btn_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reg_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/login_button"
                android:layout_toLeftOf="@id/login_button"
                android:text="@string/btn_nohave_account"
                android:textAllCaps="false" />

        </RelativeLayout>
    </LinearLayout>


</ScrollView>